objects/NADA_Device__c.object
<CustomObject>
    <description>Tradeshow device attributes</description>
    <fields>
        <fullName>Demo_Location__c</fullName>
        <inlineHelpText>Based on location of device it will be in one of these choices</inlineHelpText>
        <label>Demo Location</label>
        <picklist>
            <picklistValues>
                <fullName>Main Booth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATD Booth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offsite</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NADA_Presentation_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NADA Presentation Area</label>
        <referenceTo>NADA_Presentation_Area__c</referenceTo>
        <relationshipLabel>NADA Devices</relationshipLabel>
        <relationshipName>NADA_Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Presenter__c</fullName>
        <inlineHelpText>Person who is using the device (text since may not be a SalesForce user).   Purely for reporting purposes if needed.</inlineHelpText>
        <label>Presenter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tradeshow_Show_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tradeshow Show Code</label>
        <referenceTo>Tradeshow__c</referenceTo>
        <relationshipLabel>NADA Devices</relationshipLabel>
        <relationshipName>NADA_Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NADA Device</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tradeshow_Show_Code__c</columns>
        <columns>Demo_Location__c</columns>
        <columns>NADA_Presentation_Area__c</columns>
        <columns>Presenter__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NADA_2015_Booth</fullName>
        <columns>NAME</columns>
        <columns>Tradeshow_Show_Code__c</columns>
        <columns>Demo_Location__c</columns>
        <columns>NADA_Presentation_Area__c</columns>
        <columns>Presenter__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tradeshow_Show_Code__c</field>
            <operation>contains</operation>
            <value>FY15</value>
        </filters>
        <filters>
            <field>Demo_Location__c</field>
            <operation>contains</operation>
            <value>Booth,VIP</value>
        </filters>
        <label>NADA 2015 Booth</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NADA_2015_Offsite</fullName>
        <columns>NAME</columns>
        <columns>Tradeshow_Show_Code__c</columns>
        <columns>Demo_Location__c</columns>
        <columns>NADA_Presentation_Area__c</columns>
        <columns>Presenter__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tradeshow_Show_Code__c</field>
            <operation>contains</operation>
            <value>FY15</value>
        </filters>
        <filters>
            <field>Demo_Location__c</field>
            <operation>contains</operation>
            <value>Offsite</value>
        </filters>
        <label>NADA 2015 Offsite</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NADA_ADP</fullName>
        <columns>NAME</columns>
        <columns>Tradeshow_Show_Code__c</columns>
        <columns>Demo_Location__c</columns>
        <columns>NADA_Presentation_Area__c</columns>
        <columns>Presenter__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tradeshow_Show_Code__c</field>
            <operation>contains</operation>
            <value>nada adp</value>
        </filters>
        <label>NADA ADP</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NADA_Cobalt</fullName>
        <columns>NAME</columns>
        <columns>Tradeshow_Show_Code__c</columns>
        <columns>Demo_Location__c</columns>
        <columns>NADA_Presentation_Area__c</columns>
        <columns>Presenter__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tradeshow_Show_Code__c</field>
            <operation>contains</operation>
            <value>cobalt</value>
        </filters>
        <label>NADA Cobalt</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NADA_Dealix</fullName>
        <columns>NAME</columns>
        <columns>Tradeshow_Show_Code__c</columns>
        <columns>Demo_Location__c</columns>
        <columns>NADA_Presentation_Area__c</columns>
        <columns>Presenter__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tradeshow_Show_Code__c</field>
            <operation>contains</operation>
            <value>dealix</value>
        </filters>
        <label>NADA Dealix</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NADA_Offsite</fullName>
        <columns>NAME</columns>
        <columns>Tradeshow_Show_Code__c</columns>
        <columns>Demo_Location__c</columns>
        <columns>NADA_Presentation_Area__c</columns>
        <columns>Presenter__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tradeshow_Show_Code__c</field>
            <operation>contains</operation>
            <value>offsite</value>
        </filters>
        <label>NADA Offsite</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NADA_Party</fullName>
        <columns>NAME</columns>
        <columns>Tradeshow_Show_Code__c</columns>
        <columns>Demo_Location__c</columns>
        <columns>NADA_Presentation_Area__c</columns>
        <columns>Presenter__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tradeshow_Show_Code__c</field>
            <operation>contains</operation>
            <value>party</value>
        </filters>
        <label>NADA Party</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NADA_Truck</fullName>
        <columns>NAME</columns>
        <columns>Tradeshow_Show_Code__c</columns>
        <columns>Demo_Location__c</columns>
        <columns>NADA_Presentation_Area__c</columns>
        <columns>Presenter__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tradeshow_Show_Code__c</field>
            <operation>contains</operation>
            <value>truck</value>
        </filters>
        <label>NADA Truck</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>NADA Device ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NADA Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>